Made file update process asynchronousz

--- a/Explode/Explode.csproj
+++ b/Explode/Explode.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BuiltinPlugins.cs" />
+    <Compile Include="FileUpdateHandler.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
