--- a/ExplodeNintendoPlugins/ExplodeNintendoPlugins.csproj
+++ b/ExplodeNintendoPlugins/ExplodeNintendoPlugins.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.NETCore.Portable.Compatibility" Version="1.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ExplodePluginBase\ExplodePluginBase.csproj" />
   </ItemGroup>
 
