--- a/Explode/Explode.csproj
+++ b/Explode/Explode.csproj
@@ -78,8 +78,8 @@
     <Compile Include="PluginManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities\IconCacher.cs" />
     <Compile Include="Utilities\IconHelper.cs" />
-    <Compile Include="Utilities\IconListManager.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
