--- a/Explode/Explode.csproj
+++ b/Explode/Explode.csproj
@@ -76,6 +76,12 @@
     <Compile Include="FormMain.Designer.cs">
       <DependentUpon>FormMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormMoveFiles.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormMoveFiles.Designer.cs">
+      <DependentUpon>FormMoveFiles.cs</DependentUpon>
+    </Compile>
     <Compile Include="IOFunctions.cs" />
     <Compile Include="PluginManager.cs" />
     <Compile Include="Program.cs" />
@@ -87,6 +93,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormMain.resx">
       <DependentUpon>FormMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormMoveFiles.resx">
+      <DependentUpon>FormMoveFiles.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
